Fixes for presentation on small screens

--- a/apps/pxweb2/src/app/app.module.scss
+++ b/apps/pxweb2/src/app/app.module.scss
@@ -17,10 +17,14 @@
   
   @media (min-width: fixed.$breakpoints-xsmall-min-width) and (max-width: fixed.$breakpoints-xsmall-max-width) {
     left: 0px;
+    background: var(--px-color-surface-default);
+    width: 100%;  
   }
 
   @media (min-width: fixed.$breakpoints-small-min-width) and (max-width: fixed.$breakpoints-small-max-width) {
     left: 0px;
+    background: var(--px-color-surface-default);
+    width: 100%;
   }
 
   @media (min-width: fixed.$breakpoints-medium-min-width) and (max-width: fixed.$breakpoints-medium-max-width) {
@@ -87,11 +91,13 @@
   @media (min-width: fixed.$breakpoints-xsmall-min-width) and (max-width: fixed.$breakpoints-xsmall-max-width) {
     padding: fixed.$spacing-4;
     gap: fixed.$spacing-7;
+    border-radius: var(--px-border-radius-none);
   }
   
   @media (min-width: fixed.$breakpoints-small-min-width) and (max-width: fixed.$breakpoints-small-max-width) {
     padding: fixed.$spacing-6;
     gap: fixed.$spacing-9;
+    border-radius: var(--px-border-radius-none);
   }
 
   @media (min-width: fixed.$breakpoints-medium-min-width) and (max-width: fixed.$breakpoints-medium-max-width) {
