--- a/apps/pxweb2/src/app/components/Footer/Footer.module.scss
+++ b/apps/pxweb2/src/app/components/Footer/Footer.module.scss
@@ -45,11 +45,13 @@
   @media (min-width: fixed.$breakpoints-xsmall-min-width) and (max-width: fixed.$breakpoints-xsmall-max-width) {
     padding: fixed.$spacing-4;
     border-radius: var(--px-border-radius-none);
+    padding-bottom: fixed.$spacing-24;
   }
 
   @media (min-width: fixed.$breakpoints-small-min-width) and (max-width: fixed.$breakpoints-small-max-width) {
     padding: fixed.$spacing-6;
     border-radius: var(--px-border-radius-none);
+    padding-bottom: fixed.$spacing-24;
   }
   
   @media (min-width: fixed.$breakpoints-medium-min-width) and (max-width: fixed.$breakpoints-medium-max-width) {
